Fixed layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -203,7 +204,6 @@ nav {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 10px;
 }
 
 .flex-social {
@@ -244,6 +244,8 @@ nav {
 .member-container {
     display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: column;
     padding-bottom: 20px;
     margin-top: 10px;
     font-size: 14px;
@@ -272,12 +274,6 @@ nav {
     cursor: pointer;
     font-size: 16px;
     display: inline-block;
-}
-
-.member-date {
-    display: flex;
-    margin-left: auto;
-    justify-content: flex-end;
 }
 
 .activity-info {
@@ -403,4 +399,19 @@ main {
 .nav-img,
 .profile-pic {
     width: 30px;
+}
+
+/* -----------------------------
+  Media Queries
+------------------------------ */
+
+@media (min-width: 768px) {
+  .member-container {
+    flex-direction: row;
+  }
+  .member-date {
+    display: flex;
+    margin-left: auto;
+    justify-content: flex-end;
+  }
 }
